--- a/appspec.yml
+++ b/appspec.yml
@@ -6,14 +6,14 @@ files:
 
 hooks:
   ApplicationStart:
-    - location: scripts/start_server.sh
+    - location: start_server.sh
       timeout: 300
       runas: ec2-user
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: stop_server.sh
       timeout: 300
       runas: ec2-user
   BeforeInstall:
-    - location: scripts/install_dependencies.sh
+    - location: install_dependencies.sh
       timeout: 300
       runas: ec2-user
