--- a/appspec.yml
+++ b/appspec.yml
@@ -2,18 +2,8 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/flask-app
-
+    destination: /var/www/html/Flask-web-app
 hooks:
   ApplicationStart:
-    - location: start_server.sh
+    - location: scripts/application_start.sh
       timeout: 300
-      runas: ec2-user
-  ApplicationStop:
-    - location: stop_server.sh
-      timeout: 300
-      runas: ec2-user
-  BeforeInstall:
-    - location: install_dependencies.sh
-      timeout: 300
-      runas: ec2-user
